# dooh-control-tower

./: .env.example  .gitignore  CONTEXT.md  README.md  alembic.ini  architecture-assessment.md  docker-compose.yml  pre-prd-v1.md  pyproject.toml  roadmap.md
alembic/: env.py
alembic/versions/: 043e976fcdac_add_campaign_creative_targeting.py  8a63258f9f2f_add_pop_event_partitioned_pacing_bucket.py  c26d503aaab1_create_screen_table.py
docs/adr/: 0001-pop-event-natural-pk-and-denormalized-h3.md  0002-h3-python-not-extension.md
docs/reflections/: m0-3-mcp-hello-world.html  m0-4b-stdio-vs-streamable-http.html  m0-5-structured-output.html  m0-6-postgres-bind.html  m1-1-first-spatial-table.html  m1-2-synthetic-network.html  m1-3-first-mcp-ui-surface.html  m1-4-multi-table-schema.html  m1-5-partitioned-pop-events.html  m1-6-h3-indexing.html
scripts/: probe-streamable-http.sh
src/dooh_control_tower/: app.py  db.py  seed.py
src/dooh_control_tower/mcp/: server.py
src/dooh_control_tower/mcp/tools/: __init__.py  about.py  health.py  screen_map.py  screens.py
src/dooh_control_tower/models/: __init__.py  base.py  campaign.py  creative.py  pacing_bucket.py  pop_event.py  screen.py  targeting.py
