[project]
name = "dooh-control-tower"
version = "0.1.0"
description = "Chat-driven operational tool for Digital Out-of-Home advertising."
authors = [
    { name = "BurakMert", email = "bmert88@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "geoalchemy2>=0.20.0",
    "h3>=4.2",
    "mcp-ui-server>=1.0.0",
    "mcp[cli]>=1.27.2",
    "psycopg[binary,pool]>=3.3.4",
    "pydantic>=2.13.4",
    "sqlalchemy[asyncio]>=2.0.50",
]

[project.scripts]
dooh-mcp = "dooh_control_tower.mcp.server:main"
dooh-seed = "dooh_control_tower.seed:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
